force-app/main/default/objects/ContentVersion/fields/ContentSubType__c.field-meta.xml
<CustomField>
    <fullName>ContentSubType__c</fullName>
    <description>Secondary Content Type</description>
    <inlineHelpText>Secondary Content Type</inlineHelpText>
    <label>Content Sub Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>W8Forms</fullName>
                <label>W8 Forms</label>
            </value>
            <value>
                <fullName>W9Forms</fullName>
                <label>W9 Forms</label>
            </value>
            <value>
                <fullName>Drivers License</fullName>
            </value>
            <value>
                <fullName>Military Id</fullName>
            </value>
            <value>
                <fullName>State Id Card</fullName>
            </value>
            <value>
                <fullName>US Passport</fullName>
            </value>
            <value>
                <fullName>SentiLink</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Address Proof</fullName>
            </value>
            <value>
                <fullName>AtomicFI</fullName>
            </value>
            <value>
                <fullName>Foreign Passport</fullName>
            </value>
            <value>
                <fullName>School Id</fullName>
            </value>
            <value>
                <fullName>Social Security Card</fullName>
            </value>
            <value>
                <fullName>Tribal Id</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>