force-app/main/default/objects/ContentVersion/fields/ContentType__c.field-meta.xml
<CustomField>
    <fullName>ContentType__c</fullName>
    <description>Primary Content Type</description>
    <inlineHelpText>Primary Content Type</inlineHelpText>
    <label>Content Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Address</fullName>
            </value>
            <value>
                <fullName>Employment</fullName>
            </value>
            <value>
                <fullName>Financial</fullName>
            </value>
            <value>
                <fullName>Identity</fullName>
            </value>
            <value>
                <fullName>Income</fullName>
            </value>
            <value>
                <fullName>Asset</fullName>
            </value>
            <value>
                <fullName>KYC</fullName>
            </value>
            <value>
                <fullName>Tax</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Paystubs</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>