force-app/main/default/objects/ContentVersion/fields/Guest_Record_fileupload__c.field-meta.xml
<CustomField>
    <fullName>Guest_Record_fileupload__c</fullName>
    <label>Guest_Record_fileupload</label>
    <length>40</length>
    <type>Text</type>
</CustomField>